tests/type-errors/no_letin_in_execution.arl
archetype no_letin_in_execution

action exec () {
  effect {
    let x = 0 in
      x := 1;
      x := 2
  }
}
